<resources>
    <string name="app_name">Android Network Utility</string>
    <string name="full_app_name">Android Network Utility</string>
    <string name="scan_btn__name">Ping Host</string>
    <string name="saved_scan_btn__name">Shodan Search</string>
    <string name="manual_cmd__btn__name">Manual Command</string>
    <string name="wlan_name">Wlan</string>
    <string name="ipv4_addr">IPv4</string>
    <string name="mac_addr">MAC</string>
    <string name="wifi_warning">Please enable your Wifi before proceeding!</string>
    <string name="started_scan">Scan started!</string>
    <string name="execute_btn">Execute</string>
    <string name="ping_btn">Ping</string>
    <string name="sample_ip">127.0.0.1</string>
    <string name="no_cmd_warning">No Command selected</string>
    <string-array name="commands_array">
        <item>ifconfig</item>
        <item>netstat</item>
        <item>ps</item>
        <item>route</item>
        <item>top</item>
    </string-array>
</resources>
